--- a/WebQuanLyKho/public/css/main/bootstrap-extend.css
+++ b/WebQuanLyKho/public/css/main/bootstrap-extend.css
@@ -5285,7 +5285,7 @@ label
 {
     .modal-dialog
     {
-        /* margin: 30px; */
+/*         margin: 30px; */
     }
 }
 
@@ -5293,7 +5293,7 @@ label
 {
     .modal-dialog
     {
-        width: 600px;
+        width: 1000px;
         margin: 30px auto;
     }
     .modal-sm
@@ -5306,7 +5306,7 @@ label
 {
     .modal-lg
     {
-        width: 1000px;
+        width: 1000px !important;
     }
 }
 
